--- a/FilmCatalog/FilmCatalog/MainWindow.xaml
+++ b/FilmCatalog/FilmCatalog/MainWindow.xaml
@@ -3,32 +3,186 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="MainWindow"
-    Width="800"
-    Height="450"
+    Width="1080"
+    Height="600"
     DataContext="{Binding MainViewModel, Source={StaticResource Locator}}"
+    MouseDown="Window_MouseDown"
+    ResizeMode="NoResize"
+    WindowStartupLocation="CenterScreen"
+    WindowStyle="None"
     mc:Ignorable="d">
-    <Grid>
-        <StackPanel
-            HorizontalAlignment="Center"
-            VerticalAlignment="Center"
-            Orientation="Vertical">
-            <StackPanel Orientation="Horizontal">
-                <Button
-                    Command="{Binding StartCalculationCommand}"
-                    Content="{DynamicResource MainViewButtonStart}"
-                    Style="{StaticResource DefaultStartButton}" />
-                <Button
-                    Command="{Binding EndCalculationCommand}"
-                    Content="{DynamicResource MainViewButtonEnd}"
-                    Style="{StaticResource DefaultEndButton}" />
+
+    <Window.Resources>
+        <Storyboard x:Key="OpenMenu">
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetName="GridMenu" Storyboard.TargetProperty="(FrameworkElement.Width)">
+                <EasingDoubleKeyFrame KeyTime="0" Value="70" />
+                <EasingDoubleKeyFrame KeyTime="0:0:0.5" Value="200" />
+            </DoubleAnimationUsingKeyFrames>
+        </Storyboard>
+        <Storyboard x:Key="CloseMenu">
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetName="GridMenu" Storyboard.TargetProperty="(FrameworkElement.Width)">
+                <EasingDoubleKeyFrame KeyTime="0" Value="200" />
+                <EasingDoubleKeyFrame KeyTime="0:0:0.5" Value="70" />
+            </DoubleAnimationUsingKeyFrames>
+        </Storyboard>
+    </Window.Resources>
+    <Window.Triggers>
+        <EventTrigger RoutedEvent="ButtonBase.Click" SourceName="ButtonOpenMenu">
+            <BeginStoryboard Storyboard="{StaticResource OpenMenu}" />
+        </EventTrigger>
+        <EventTrigger RoutedEvent="ButtonBase.Click" SourceName="ButtonCloseMenu">
+            <BeginStoryboard Storyboard="{StaticResource CloseMenu}" />
+        </EventTrigger>
+    </Window.Triggers>
+    <Grid Background="#FFDEDEDE">
+        <ContentControl Margin="70,60,0,0" Content="{Binding SelectedViewModel}" />
+        <Grid
+            x:Name="GridMain"
+            Width="1010"
+            Height="540"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Bottom" />
+        <Grid
+            Height="60"
+            VerticalAlignment="Top"
+            Background="#FF5C99D6">
+            <Grid.Effect>
+                <DropShadowEffect
+                    BlurRadius="1"
+                    ShadowDepth="1"
+                    Color="#FFACACAC" />
+            </Grid.Effect>
+            <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
+                <TextBlock
+                    VerticalAlignment="Center"
+                    FontSize="16"
+                    Foreground="White"
+                    Text="Username here" />
+                <materialDesign:PopupBox
+                    Margin="10"
+                    Foreground="White"
+                    PlacementMode="BottomAndAlignRightEdges"
+                    StaysOpen="False">
+                    <StackPanel Width="150">
+                        <Button Content="Settings" />
+                        <Button Content="Account" />
+                        <Button Content="Help" />
+                        <Separator />
+                        <Button Content="Logout" />
+                    </StackPanel>
+                </materialDesign:PopupBox>
             </StackPanel>
-            <Label
-                Margin="10"
+            <TextBlock
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center"
-                Content="{Binding CalculationNumber}" />
-        </StackPanel>
+                FontSize="22"
+                Foreground="White"
+                Text="Filmach" />
+        </Grid>
+        <Grid
+            x:Name="GridMenu"
+            Width="70"
+            HorizontalAlignment="Left"
+            Background="#FF31577E">
+            <StackPanel>
+                <Grid
+                    Height="150"
+                    Background="White"
+                    RenderTransformOrigin="0.5,0.5">
+                    <Grid.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform />
+                            <SkewTransform />
+                            <RotateTransform />
+                            <TranslateTransform />
+                        </TransformGroup>
+                    </Grid.RenderTransform>
+                    <Button
+                        x:Name="ButtonOpenMenu"
+                        Width="60"
+                        Height="60"
+                        Margin="5"
+                        HorizontalAlignment="Right"
+                        VerticalAlignment="Top"
+                        Background="{x:Null}"
+                        BorderBrush="{x:Null}"
+                        Click="ButtonOpenMenu_Click"
+                        Foreground="#FF31577E">
+                        <materialDesign:PackIcon
+                            Width="25"
+                            Height="25"
+                            Kind="Menu" />
+                    </Button>
+                    <Button
+                        x:Name="ButtonCloseMenu"
+                        Width="60"
+                        Height="60"
+                        Margin="5"
+                        HorizontalAlignment="Right"
+                        VerticalAlignment="Top"
+                        Background="{x:Null}"
+                        BorderBrush="{x:Null}"
+                        Click="ButtonCloseMenu_Click"
+                        Foreground="#FF31577E"
+                        Visibility="Collapsed">
+                        <materialDesign:PackIcon
+                            Width="25"
+                            Height="25"
+                            Kind="ArrowLeft" />
+                    </Button>
+
+                    <Image Height="80" VerticalAlignment="Bottom" />
+                </Grid>
+                <ListView
+                    x:Name="ListViewMenu"
+                    Foreground="#FF5C99D6"
+                    ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+                    <ListViewItem x:Name="ItemHome" Height="60">
+                        <Button
+                            Width="180"
+                            Command="{Binding UpdateViewCommand}"
+                            Style="{StaticResource DefaultButton}">
+                            <Grid Width="180" HorizontalAlignment="Left">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="0.25*" />
+                                    <ColumnDefinition Width="0.75*" />
+                                </Grid.ColumnDefinitions>
+                                <materialDesign:PackIcon
+                                    Grid.Column="0"
+                                    Foreground="#FF5C99D6"
+                                    Kind="home"
+                                    Style="{StaticResource NavMenuIcon}" />
+                                <TextBlock
+                                    Grid.Column="1"
+                                    Foreground="#FF5C99D6"
+                                    Style="{StaticResource NavManuTextBlock}"
+                                    Text="Home" />
+                            </Grid>
+                        </Button>
+                    </ListViewItem>
+                    <ListViewItem x:Name="ItemCreate" Height="60">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="Pencil" Style="{StaticResource NavMenuIcon}" />
+                            <TextBlock Style="{StaticResource NavManuTextBlock}" Text="Create" />
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem Height="60">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="Ticket" Style="{StaticResource NavMenuIcon}" />
+                            <TextBlock Style="{StaticResource NavManuTextBlock}" Text="Tickets" />
+                        </StackPanel>
+                    </ListViewItem>
+                    <ListViewItem Height="60">
+                        <StackPanel Orientation="Horizontal">
+                            <materialDesign:PackIcon Kind="Message" Style="{StaticResource NavMenuIcon}" />
+                            <TextBlock Style="{StaticResource NavManuTextBlock}" Text="Messages" />
+                        </StackPanel>
+                    </ListViewItem>
+                </ListView>
+            </StackPanel>
+        </Grid>
     </Grid>
 </Window>
