--- a/FilmCatalog/FilmCatalog/Resources/ViewModelToViews.xaml
+++ b/FilmCatalog/FilmCatalog/Resources/ViewModelToViews.xaml
@@ -7,5 +7,9 @@
     <DataTemplate DataType="{x:Type viewmodels:UserFilmsViewModel}">
         <views:UserFilmsView />
     </DataTemplate>
+
+    <DataTemplate DataType="{x:Type viewmodels:AuthorizationViewModel}">
+        <views:AuthorizationWindow />
+    </DataTemplate>
     
 </ResourceDictionary>
