--- a/FilmCatalog/FilmCatalog/Resources/PageStyles.xaml
+++ b/FilmCatalog/FilmCatalog/Resources/PageStyles.xaml
@@ -136,4 +136,24 @@
         <Setter Property="VerticalAlignment" Value="Center" />
     </Style>
 
+    <Style x:Key="AuthorizationHeader" TargetType="TextBlock">
+        <Setter Property="Margin" Value="20" />
+        <Setter Property="Foreground" Value="White" />
+        <Setter Property="TextAlignment" Value="Center" />
+        <Setter Property="FontSize" Value="42" />
+        <Setter Property="FontFamily" Value="Kayak Sans" />
+    </Style>
+
+    <Style x:Key="DefaultTabItem" TargetType="TabItem">
+        <Setter Property="Margin" Value="20,10" />
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="BorderBrush" Value="Transparent" />
+        <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="Foreground" Value="White" />
+        <Setter Property="FontSize" Value="20" />
+        <Setter Property="Height" Value="40" />
+        <Setter Property="Width" Value="100" />
+        <Setter Property="Padding" Value="0" />
+    </Style>
+
 </ResourceDictionary>
