--- a/FilmCatalog/FilmCatalog/Resources/PageStyles.xaml
+++ b/FilmCatalog/FilmCatalog/Resources/PageStyles.xaml
@@ -156,4 +156,83 @@
         <Setter Property="Padding" Value="0" />
     </Style>
 
+    <Style x:Key="TabControl" TargetType="TabControl">
+        <Setter Property="Background" Value="{x:Null}" />
+        <Setter Property="BorderBrush" Value="{x:Null}" />
+        <Setter Property="BorderThickness" Value="0" />
+    </Style>
+
+    <Style x:Key="TabItem" TargetType="TabItem">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="TabItem">
+                    <Border
+                        Name="Tab"
+                        Width="150"
+                        MinHeight="50"
+                        Margin="0,1,2,4"
+                        Padding="15">
+                        <ContentPresenter
+                            x:Name="ContentSite"
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Center"
+                            ContentSource="Header">
+                            <ContentPresenter.Resources>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="TextWrapping" Value="Wrap" />
+                                    <Setter Property="FontWeight" Value="Bold" />
+                                    <Setter Property="FontSize" Value="15" />
+                                    <Setter Property="TextAlignment" Value="Right" />
+                                    <Setter Property="LineStackingStrategy" Value="BlockLineHeight" />
+                                    <Setter Property="LineHeight" Value="17" />
+                                    <Style.Triggers>
+                                        <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType=TabItem, AncestorLevel=1}, Path=IsSelected}" Value="True">
+                                            <Setter Property="Foreground" Value="White" />
+                                        </DataTrigger>
+                                        <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType=TabItem, AncestorLevel=1}, Path=IsSelected}" Value="False">
+                                            <Setter Property="Foreground" Value="{DynamicResource BlackPurpleC}" />
+                                        </DataTrigger>
+                                        <MultiDataTrigger>
+                                            <MultiDataTrigger.Conditions>
+                                                <Condition Binding="{Binding RelativeSource={RelativeSource AncestorType=TabItem, AncestorLevel=1}, Path=IsMouseOver}" Value="True" />
+                                                <Condition Binding="{Binding RelativeSource={RelativeSource AncestorType=TabItem, AncestorLevel=1}, Path=IsSelected}" Value="False" />
+                                            </MultiDataTrigger.Conditions>
+                                            <Setter Property="Foreground" Value="White" />
+                                        </MultiDataTrigger>
+                                        <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType=TabControl, AncestorLevel=1}, Path=TabStripPlacement}" Value="Top">
+                                            <Setter Property="TextAlignment" Value="Center" />
+                                        </DataTrigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </ContentPresenter.Resources>
+                        </ContentPresenter>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsSelected" Value="True">
+                            <Setter TargetName="Tab" Property="Background" Value="{DynamicResource PurpleC}" />
+                        </Trigger>
+                        <Trigger Property="IsSelected" Value="False">
+                            <Setter TargetName="Tab" Property="Background" Value="{DynamicResource BlackGrayC}" />
+                        </Trigger>
+                        <MultiTrigger>
+                            <MultiTrigger.Conditions>
+                                <Condition Property="IsMouseOver" Value="True" />
+                                <Condition Property="IsSelected" Value="False" />
+                            </MultiTrigger.Conditions>
+                            <Setter TargetName="Tab" Property="Background" Value="{DynamicResource PurpleHoverC}" />
+                        </MultiTrigger>
+                        <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType=TabControl, AncestorLevel=1}, Path=TabStripPlacement}" Value="Top">
+                            <Setter TargetName="Tab" Property="Width" Value="Auto" />
+                            <Setter TargetName="Tab" Property="Margin" Value="4,0,2,2" />
+                            <Setter TargetName="Tab" Property="Padding" Value="15,10" />
+                            <Setter TargetName="Tab" Property="MinHeight" Value="0" />
+                            <Setter TargetName="Tab" Property="MinWidth" Value="100" />
+                            <Setter TargetName="ContentSite" Property="HorizontalAlignment" Value="Center" />
+                        </DataTrigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
 </ResourceDictionary>
