--- a/FilmCatalog/FilmCatalog/Resources/PageStyles.xaml
+++ b/FilmCatalog/FilmCatalog/Resources/PageStyles.xaml
@@ -130,6 +130,15 @@
         <Setter Property="Margin" Value="10" />
     </Style>
 
+    <Style x:Key="DefaultIcon" TargetType="materialDesign:PackIcon">
+        <Setter Property="Width" Value="25" />
+        <Setter Property="Height" Value="25" />
+        <Setter Property="HorizontalAlignment" Value="Center" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="HorizontalContentAlignment" Value="Center" />
+        <Setter Property="VerticalContentAlignment" Value="Center" />
+    </Style>
+
     <Style x:Key="NavManuTextBlock" TargetType="TextBlock">
         <Setter Property="Margin" Value="20,10" />
         <Setter Property="HorizontalAlignment" Value="Left" />
@@ -154,6 +163,14 @@
         <Setter Property="Height" Value="40" />
         <Setter Property="Width" Value="100" />
         <Setter Property="Padding" Value="0" />
+    </Style>
+
+    <Style x:Key="DefaultTextBlock" TargetType="TextBlock">
+        <Setter Property="Foreground" Value="Black" />
+        <Setter Property="TextAlignment" Value="Center" />
+        <Setter Property="HorizontalAlignment" Value="Center" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="FontFamily" Value="Kayak Sans" />
     </Style>
 
     <Style x:Key="TabControl" TargetType="TabControl">
